// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`create group post reply > should not create on non-existing topic 1`] = `
Object {
  "code": "NOT_FOUND",
  "error": "Not Found",
  "message": "topic 3716000 not found",
  "statusCode": 404,
}
`;

exports[`create group post reply > should not create on non-existing topic reply 1`] = `
Object {
  "code": "NOT_FOUND",
  "error": "Not Found",
  "message": "parent post id 11 not found",
  "statusCode": 404,
}
`;

exports[`delete group post > not allowed not login 1`] = `
Object {
  "code": "NEED_LOGIN",
  "error": "Unauthorized",
  "message": "you need to login before delete a post",
  "statusCode": 401,
}
`;

exports[`delete group post > not allowed wrong user 1`] = `
Object {
  "code": "NOT_ALLOWED",
  "error": "Unauthorized",
  "message": "you don't have permission to delete this post",
  "statusCode": 401,
}
`;

exports[`delete group post > ok 1`] = `Object {}`;

exports[`delete subject post > not allowed not login 1`] = `
Object {
  "code": "NEED_LOGIN",
  "error": "Unauthorized",
  "message": "you need to login before delete a post",
  "statusCode": 401,
}
`;

exports[`delete subject post > not allowed wrong user 1`] = `
Object {
  "code": "NOT_ALLOWED",
  "error": "Unauthorized",
  "message": "you don't have permission to delete this post",
  "statusCode": 401,
}
`;

exports[`delete subject post > ok 1`] = `Object {}`;
